--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ html {
 }
 
 body {
+    /*position: fixed;*/
+    top: 0;
+    left: 0;
+    right: 0;
     background: #333333 no-repeat fixed left bottom;
     background-size: cover;
     color: #fff;
@@ -19,6 +23,7 @@ body {
     /*font-family: 'Press Start 2P', cursive;*/
     font-family: 'Share Tech', 'Kosugi', sans-serif;
 }
+
 h3 {
     text-align: center;
     color: #fff;
@@ -26,6 +31,7 @@ h3 {
     font-size: 58px;
     font-family: 'Hiragino Maru Gothic Pro', 'ヒラギノ丸ゴ Pro W4', sans-serif;
 }
+
 @media only screen and (max-device-width: 480px) {
     h3 {
         text-align: center;
@@ -50,6 +56,10 @@ ul {
 
 li {
     display: inline;
+}
+
+strong {
+    background: linear-gradient(transparent 30%, #de9610 30%);
 }
 
 #particles-js {
@@ -152,6 +162,7 @@ li {
     background-color: #CCCCCC;
     color: #000;
 }
+
 .curtain1 {
     /*padding: 80px 30px;*/
     padding: 100px 30px 0;
@@ -280,6 +291,7 @@ li {
     font-size: 1.2rem;
     line-height: 2;
 }
+
 .square1 {
     display: inline-block;
     width: 150px;
@@ -319,6 +331,7 @@ li {
     /*background-color:lightgray;*/
     text-align: center;
 }
+
 @media only screen and (max-device-width: 480px) {
     .square1 {
         display: inline-block;
@@ -360,6 +373,7 @@ li {
         text-align: center;
     }
 }
+
 #e1d4e6
 .skills {
     /*padding: 80px 30px;*/
@@ -422,6 +436,7 @@ li {
     padding: 10vh 30px 0;
     height: 100vh;
     /*background-color: #844f30;*/
+    background-color: #13E8E9;
 }
 
 .contact-icon {
@@ -431,6 +446,11 @@ li {
     color: #000000;
     font-size: 12rem;
     line-height: 142px;
+}
+
+.contact-icon:hover {
+    transform: scale(1.2); /*画像の拡大率*/
+    transition-duration: 0.3s; /*変化に掛かる時間*/
 }
 
 .footer {
