--- a/css/style.css
+++ b/css/style.css
@@ -29,26 +29,8 @@ h3 {
     font-family: 'Hiragino Maru Gothic Pro', 'ヒラギノ丸ゴ Pro W4', sans-serif;
 }
 
-@media only screen and (max-device-width: 480px) {
-    h3 {
-        text-align: center;
-        color: #fff;
-        text-shadow: 0 0 15px #FF6694;
-        font-size: 40px;
-        font-family: 'Hiragino Maru Gothic Pro', 'ヒラギノ丸ゴ Pro W4', sans-serif;
-    }
-}
-
 div {
     display: block;
-}
-
-ul {
-    margin: 0 auto;
-    padding: 0;
-    display: flex;
-    width: 400px;
-    justify-content: space-around;
 }
 
 li {
@@ -204,7 +186,7 @@ strong {
 
 .about-text {
     margin: 30px 0;
-    line-height: 1vh;
+    line-height: 2vh;
     font-size: 2.0rem;
 }
 
@@ -284,44 +266,6 @@ strong {
     text-align: center;
 }
 
-@media only screen and (max-device-width: 480px) {
-    .square1 {
-        display: inline-block;
-        width: 100px;
-        height: 100px;
-        margin: 5px;
-        border: solid 5px #dd9b9d;
-        text-align: center;
-    }
-
-    .square2 {
-        display: inline-block;
-        width: 100px;
-        height: 100px;
-        margin: 5px;
-        border: solid 5px #9ac29f;
-        text-align: center;
-    }
-
-    .square3 {
-        display: inline-block;
-        width: 100px;
-        height: 100px;
-        margin: 5px;
-        border: solid 5px #a979ad;
-        text-align: center;
-    }
-
-    .square4 {
-        display: inline-block;
-        width: 100px;
-        height: 100px;
-        margin: 5px;
-        border: solid 5px #b2d6d4;
-        text-align: center;
-    }
-}
-
 .skills {
     margin: 10000px;
     padding: 10vh 30px 0;
@@ -378,6 +322,14 @@ strong {
     background-color: #13E8E9;
 }
 
+.icon-ul {
+    margin: 0 auto;
+    padding: 0;
+    display: flex;
+    width: 400px;
+    justify-content: space-around;
+}
+
 .contact-icon {
     width: 150px;
     height: 150px;
@@ -395,4 +347,108 @@ strong {
 .footer {
     padding: 0 0 30px;
     font-size: 1.3rem;
+}
+
+@media only screen and (max-width: 768px) {
+    h3 {
+        text-align: center;
+        color: #fff;
+        text-shadow: 0 0 15px #FF6694;
+        font-size: 40px;
+        font-family: 'Hiragino Maru Gothic Pro', 'ヒラギノ丸ゴ Pro W4', sans-serif;
+    }
+
+    .site-title {
+        margin: 0 0 5px;
+        font-size: 9.5rem;
+    }
+
+    .site-description {
+        margin-bottom: 15px;
+        color: #888;
+        font-size: 2rem;
+    }
+
+    .site-title-sub {
+        margin: 0 0 5px;
+        letter-spacing: 1px;
+        font-size: 2.2rem;
+    }
+
+    .about {
+        padding: 30px 30px 0;
+        height: 100vh;
+        background-color: #CCCCCC;
+        color: #000;
+    }
+
+    .wrap {
+        text-align: center;
+        margin: 2% auto 20%;
+    }
+
+    .icon {
+        width: 10%;
+        height: 50%;
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    .icon img {
+        border-radius: 100%;
+        padding: 0 0 0 10px;
+    }
+
+    .about-text {
+        margin: 70% 0 0;
+        line-height: 0.5;
+        font-size: 1.0rem;
+    }
+
+    .square1 {
+        display: inline-block;
+        width: 100px;
+        height: 100px;
+        margin: 5px;
+        border: solid 5px #dd9b9d;
+        text-align: center;
+    }
+
+    .square2 {
+        display: inline-block;
+        width: 100px;
+        height: 100px;
+        margin: 5px;
+        border: solid 5px #9ac29f;
+        text-align: center;
+    }
+
+    .square3 {
+        display: inline-block;
+        width: 100px;
+        height: 100px;
+        margin: 5px;
+        border: solid 5px #a979ad;
+        text-align: center;
+    }
+
+    .square4 {
+        display: inline-block;
+        width: 100px;
+        height: 100px;
+        margin: 5px;
+        border: solid 5px #b2d6d4;
+        text-align: center;
+    }
+
+    .icon-ul {
+        width: 120px;
+    }
+
+    .contact-icon {
+        /*margin: 0 5px 10px 0;*/
+        color: #000000;
+        font-size: 12rem;
+        line-height: 142px;
+    }
 }
